<resources>
    <string name="app_name">MobileSafe</string>
    <string name="button_run_scheduler">Run Schedulers Example</string>
    <string name="version_code">版本号</string>
    <string name="home_text_top">爱咖手机助手</string>
    <string name="top_title">Gongneng</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="one_key_lock_screen">锁屏</string>
    <string name="close">Close</string>
    <string name="smarthome">智能家居</string>
    <string name="passage_light">楼道灯</string>
    <string name="kids_room_light">闺女卧室灯</string>
    <string name="master_room_light">主卧室灯</string>
    <string name="keyboard_panel_resolved">解决切换冲突</string>
    <string name="keyboard_panel_fullscreen_resolved">解决了全屏切换冲突</string>
    <string name="keyboard_panel_unresolved">未解决切换冲突</string>
    <string name="resolved_titlebar">解决面板-键盘切换冲突</string>
    <string name="translucent_fullscreen_tips">透明全屏布局</string>
    <string name="press_say">按住说话</string>
    <string name="site">位置</string>
    <string name="image">图片</string>
    <string name="category_pic">图片</string>
    <string name="category_video">视频</string>
    <string name="category_doc">文档</string>
    <string name="category_music">音乐</string>
    <string name="category_apk">安装包</string>
    <string name="category_zip">压缩包</string>
    <string name="category_fav">收藏</string>
    <string name="category_bluetooth">蓝牙</string>
    <string name="file_tree">文件目录</string>
    <string name="root_memory_storage">手机存储</string>
    <string name="root_sdcard_storage">内部存储</string>
    <string name="root_sdcard_storage_exten">SD存储卡</string>
    <string name="person_number">%1$s人</string>
    <string name="count_number">%1$s次</string>
    <string name="file_total_b">%1$sB</string>
    <string name="file_total_kb">%1$sKB</string>
    <string name="file_total_mb">%1$sMB</string>
    <string name="title_activity_user_center">个人中心</string>
    <string name="title_activity_help">快速指南</string>
    <string name="title_activity_feed_back">意见反馈</string>
    <string name="title_activity_version">版本和反馈</string>
    <string name="title_activity_contact_us">联系我们</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_share_app">给身边的人装快传</string>
    <string name="title_activity_show_image">查看图片</string>
    <string name="title_activity_share_pc">分享电脑</string>
    <string name="bluetooth_invite">蓝牙邀请</string>
    <string name="zero_traffic_invite">零流量邀请</string>
    <string name="invite_description">扫描二维码可以直接联系我吧</string>
    <string name="title_activity_find_bluethooth">蓝牙设备选择器</string>
    <string name="search_mobile">扫描查找设备</string>
    <string name="useable_mobile">可用设备</string>
    <string name="wx_qr_code">微信二维码</string>
    <string name="contact_qq">QQ:379869869</string>
    <string name="app_version">版本: %1$s</string>
    <string name="company">晨讯科技有限公司</string>
    <string name="copyright">Copyright © 2016 Simcom,Inc.</string>
    <string name="allright">All Rights Reserved</string>
    <string name="is_new">已经是最新版本</string>
    <string name="check_version">检查新版本</string>
    <string name="thanks_feedback">意见已经提交,谢谢你的支持</string>
    <string name="feedback_tip">请输入反馈意见</string>
    <string name="more">更多</string>
    <string name="cross_platform_transfer">跨平台传输</string>
    <string name="invite">邀请</string>
    <string name="connect_pc">连接电脑</string>
    <string name="connect_firend">连朋友 传文件</string>
    <string name="mobile_all">手机全部</string>
    <string name="picture">照片</string>
    <string name="music">音乐</string>
    <string name="video">视频</string>
    <string name="application">应用</string>
    <string name="history_message">历史消息</string>
    <string name="inbox">收件箱</string>
    <string name="other">其他</string>
    <string name="folder">文件夹</string>
    <string name="install">安装包</string>
    <string name="disk_status">可用:%1$s/%2$s</string>
    <string name="clear">清除</string>
    <string name="from">接收自 %1$s</string>
    <string name="transfer">传输</string>
    <string name="multi_select">多选</string>
    <string name="play">播放</string>
    <string name="send_to">发送给 %1$s</string>
    <string name="receive_from">接收自 %1$s</string>
    <string name="percent">%1$s%%</string>
    <string name="create_file_success">创建成功</string>
    <string name="create_file_failed">创建失败</string>
    <string name="check_task_success">校验成功</string>
    <string name="check_task_failed">校验失败</string>
    <string name="set_file_complete">发送完成</string>
    <string name="set_file_failed">发送失败</string>
    <string name="set_file_stop">暂停</string>
    <string name="set_file_transmit">传输中</string>
    <string name="set_file_waiting">排队中</string>
    <string name="retry">重试</string>
    <string name="view">查看</string>
    <string name="resume">继续</string>
    <string name="stop">暂停</string>
    <string name="mobile">手机</string>
    <string name="message">消息</string>
    <string name="cancel">取消</string>
    <string name="property">属性</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>
    <string name="uninstall">卸载</string>
    <string name="rename">重命名</string>
    <string name="back">备份</string>
    <string name="btn_sure">确定</string>
    <string name="property_name">名称:%1$s</string>
    <string name="property_type">类型:%1$s</string>
    <string name="property_path">位置:%1$s</string>
    <string name="property_size">大小:%1$s</string>
    <string name="property_edit_time">修改日期:%1$s</string>
    <string name="mime_audio">音频</string>
    <string name="mime_video">视频</string>
    <string name="mime_image">图片</string>
    <string name="mime_app">应用</string>
    <string name="mime_normal">文件</string>
    <string name="please_input_new_name">请输入新文件名</string>
    <string name="sure_delete_file">你确定要删除吗?</string>
    <string name="backup_success">备份成功</string>
    <string name="up_dir">上一级</string>
    <string name="local_music">本地音乐(%1$s)</string>
    <string name="local_video">本地视频(%1$s)</string>
    <string name="local_app">本地程序(%1$s)</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="msg_net_off">未连接上网络</string>
    <string name="invite_nearby_friend">邀请附近的朋友</string>
    <string name="step1">第1步</string>
    <string name="step2">第2步</string>
    <string name="step1_hint">请好友打开手机WIFI,连接到无线网络</string>
    <string name="step2_hint">打开浏览器输入网址,或扫描二维码</string>
    <string name="default_wifi">DM-JoinMe</string>
    <string name="default_ap_ip">http://192.168.43.1:7766</string>
    <string name="connecting">全速连接中,请稍后...</string>
    <string name="connect_success">连接成功后,任意文件零流量传输~</string>
    <string name="create_connect">创建成功,等待朋友搜索加入</string>
    <string name="let_friend_join">让朋友搜索加入"%1$s"</string>
</resources>