<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/TitleBarStyle"
        android:text="@string/resolved_titlebar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickResolved"
        android:padding="5dp"
        android:text="@string/keyboard_panel_resolved" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickFullScreenResolved"
        android:padding="5dp"
        android:text="@string/keyboard_panel_fullscreen_resolved" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickUnResolved"
        android:padding="5dp"
        android:text="@string/keyboard_panel_unresolved" />
</LinearLayout>