<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical"
    android:padding="@dimen/dp_5">

    <TextView
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_45"
        android:gravity="center"
        android:text="@string/please_input_new_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_17" />

    <EditText
        android:id="@+id/edt_new_name"
        android:layout_width="@dimen/dp_260"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@null"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.15"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/division_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_rename_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_weight="1"
            android:background="@drawable/menu_selector"
            android:text="@string/cancel"
            android:textColor="@color/gray_font"
            android:textSize="@dimen/sp_17" />

        <Button
            android:id="@+id/dialog_rename_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_45"
            android:layout_weight="1"
            android:background="@drawable/menu_selector"
            android:text="@string/btn_sure"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_17" />

    </LinearLayout>


</LinearLayout>